--- a/static/css/normalize.css
+++ b/static/css/normalize.css
@@ -422,3 +422,12 @@ td,
 th {
   padding: 0;
 }
+
+.avatar img {
+  width: 10rem;
+  height: auto;
+  border-radius: 50%;
+  @media only screen and (max-device-width: 768px) {
+    width: 10rem;
+  }
+}
